fix formulaire aligné à gauche sur grands ecrans

--- a/css/output.css
+++ b/css/output.css
@@ -3599,16 +3599,16 @@ html {
   width: 6rem;
 }
 
-.w-52 {
-  width: 13rem;
-}
-
 .w-56 {
   width: 14rem;
 }
 
 .w-2\/3 {
   width: 66.666667%;
+}
+
+.w-1\/3 {
+  width: 33.333333%;
 }
 
 .w-auto {
@@ -3623,12 +3623,12 @@ html {
   width: 18rem;
 }
 
-.w-1\/3 {
-  width: 33.333333%;
-}
-
 .w-10 {
   width: 2.5rem;
+}
+
+.w-52 {
+  width: 13rem;
 }
 
 .w-36 {
@@ -3637,10 +3637,6 @@ html {
 
 .w-\[310px\] {
   width: 310px;
-}
-
-.w-1\/2 {
-  width: 50%;
 }
 
 .min-w-\[40\%\] {
@@ -3735,10 +3731,6 @@ html {
 
 .content-center {
   align-content: center;
-}
-
-.items-end {
-  align-items: flex-end;
 }
 
 .items-center {
@@ -4011,15 +4003,6 @@ html {
   text-align: end;
 }
 
-.align-middle {
-  vertical-align: middle;
-}
-
-.text-5xl {
-  font-size: 3rem;
-  line-height: 1;
-}
-
 .text-3xl {
   font-size: 1.875rem;
   line-height: 2.25rem;
@@ -4043,6 +4026,11 @@ html {
 .text-lg {
   font-size: 1.125rem;
   line-height: 1.75rem;
+}
+
+.text-5xl {
+  font-size: 3rem;
+  line-height: 1;
 }
 
 .font-bold {
@@ -4310,6 +4298,11 @@ html {
     padding: 0px;
   }
 
+  .md\:text-5xl {
+    font-size: 3rem;
+    line-height: 1;
+  }
+
   .md\:text-3xl {
     font-size: 1.875rem;
     line-height: 2.25rem;
@@ -4318,11 +4311,6 @@ html {
   .md\:text-2xl {
     font-size: 1.5rem;
     line-height: 2rem;
-  }
-
-  .md\:text-5xl {
-    font-size: 3rem;
-    line-height: 1;
   }
 
   .md\:text-lg {
